// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-ratio> Component <bolt-ratio> compiles 1`] = `

<bolt-ratio ratio="1200/660"
            style="padding-bottom: calc(660 / 1200 * 100%); --aspect-ratio: 1200/660"
>
  <img src="/fixtures/1200x660.jpg">
</bolt-ratio>

`;

exports[`<bolt-ratio> Component Default <bolt-ratio> w/o Shadow DOM renders 2`] = `

<bolt-ratio ratio="1200/660"
            style="--aspect-ratio:1200/660;"
>
  <img src="/fixtures/1200x660.jpg">
</bolt-ratio>

`;
